# forjar

./: .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pmat.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  build.rs  deny.toml  dist-forjar.yaml  flake.nix  forge.yaml  forjar.yaml  install.sh  justfile  mutants.toml  pmat_split.py  rustfmt.toml  split_files.py
.cargo/: audit.toml  config.toml
.claude/worktrees/: provable-contracts
.github/workflows/: audit.yml  behavior.yml  bench.yml  binary-release.yml  book.yml  ci.yml  convergence.yml  coverage.yml  lint.yml  miri.yml  msrv.yml  mutation.yml  nightly.yml  post-release.yml  release.yml  stress.yml
.pmat/: baseline.json  context.db  coverage-cache.json  dead-code-cache.json  deps-cache.json  file-health-baseline.json  project.toml  workspace.db
.pmat-metrics/: commit-04a561f-meta.json  commit-0707d38-meta.json  commit-08f50689-meta.json  commit-0ecdfac-meta.json  commit-1424a73e-meta.json  commit-29f5081-meta.json  commit-2f9c049b-meta.json  commit-32f9695-meta.json  commit-39ff6245-meta.json  commit-5aa0fd4e-meta.json  commit-6307d641-meta.json  commit-66e180c-meta.json  commit-72d6439a-meta.json  commit-78c1bbff-meta.json  commit-90f452f-meta.json  commit-9d164c87-meta.json  commit-a4585311-meta.json  commit-ad7f34db-meta.json  commit-c333aac0-meta.json  commit-c926995c-meta.json  commit-d059ab3f-meta.json  commit-de1bec5-meta.json  commit-e34d6a6-meta.json  commit-fa34535-meta.json
.pmat-tickets/: 5WHY-PHASE14-20260307.yaml  5WHY-PHASE15-20260307.yaml  5WHY-PHASE9-20260307.yaml  DEBT-COV-20260303134025.yaml  DEBT-SIZE-20260303134025.yaml
.pmat-work/: ledger.jsonl
.pmat-work/PMAT-022/: contract.json
.pmat-work/PMAT-023/: contract.json
.pmat-work/PMAT-024/: contract.json
.pmat-work/PMAT-025/: contract.json
.pmat-work/PMAT-026/: contract.json
.pmat-work/PMAT-027/: contract.json
.pmat-work/PMAT-028/: contract.json
.pmat-work/PMAT-029/: contract.json
.pmat-work/PMAT-030/: contract.json
.pmat-work/PMAT-031/: contract.json
.pmat-work/PMAT-032/: contract.json
.pmat-work/PMAT-033/: contract.json
.pmat-work/PMAT-034/: contract.json
.pmat-work/PMAT-035/: contract.json
.pmat-work/PMAT-036/: contract.json
.pmat-work/PMAT-037/: contract.json
.pmat-work/PMAT-038/: contract.json
.pmat-work/PMAT-039/: contract.json
.pmat-work/PMAT-040/: contract.json
.pmat-work/PMAT-041/: contract.json
.pmat-work/PMAT-042/: contract.json
.pmat-work/PMAT-043/: contract.json
.pmat-work/PMAT-044/: contract.json
.pmat-work/PMAT-045/: contract.json
.pmat-work/PMAT-046/: contract.json
.pmat-work/PMAT-047/: contract.json
.pmat-work/PMAT-048/: contract.json
.pmat-work/PMAT-049/: contract.json
.pmat-work/PMAT-050/: contract.json
.pmat-work/PMAT-051/: contract.json
.pmat-work/PMAT-052/: contract.json
.pmat-work/PMAT-053/: contract.json
.pmat-work/PMAT-054/: contract.json
.pmat-work/PMAT-055/: contract.json
.pmat-work/PMAT-056/: contract.json
.pmat-work/PMAT-060/: contract.json
.pv/: lint-previous.json
benches/: cli_bench.rs  copia_bench.rs  core_bench.rs  memory_bench.rs  store_bench.rs
benchmarks/: RESULTS.md
contracts/: apply-summary-distinguishability-v1.yaml  binding.yaml  blake3-state-v1.yaml  codegen-dispatch-v1.yaml  dag-ordering-v1.yaml  execution-safety-v1.yaml  recipe-determinism-v1.yaml
dist-output/: action.yml  binstall.toml  forjar.spec  homebrew.rb
docs/: mcp-schema.json
examples/: README.md  agent-deployment.yaml  agent_infrastructure.rs  anomaly_detection.rs  apr-compile-integration.yaml  apr-crosscompile-matrix.yaml  arch_filtering.rs  behavior_spec.rs  blake3_hashing.rs  bootstrap_machine.rs  boundary_flight_wasm.rs  build_metrics.rs  build_resource.rs  bundle_drift.rs  changeset_dag_template_codegen.rs  chunker_closure_path.rs  ci_pipeline.rs  cis_compliance.rs  codegen_dispatch_sat.rs  codegen_scripts.rs  complexity_analysis.rs  compliance_gate.rs  compliance_pack.rs  compliance_rules_migrate.rs  conda_to_far.rs  conditions_rollout_purifier.rs  connectivity_probe.rs  consumer-alimentar-quality.yaml  consumer-apr-model-build.yaml  consumer-batuta-agent.yaml  consumer-entrenar-training.yaml  consumer-forjar-self-build.yaml  container_build.rs  container_transport.rs  contract_coverage.rs  contract_gc_registry.rs  contract_pipeline_demo.rs  convergence_kernel.rs  convergence_runner.rs  convert_cache_exec.rs  (+187 more)
scripts/: bench_update.py  update_bench_table.sh
src/: generated_contracts.rs  lib.rs  main.rs
state/: forjar.inputs.lock.yaml  forjar.lock.yaml  forjar.lock.yaml.b3  state.db
tests/: Dockerfile.test-target  container_transport.rs  falsification_audit_encrypt_rollout.rs  falsification_boundary_flight.rs  falsification_changeset_dag_staleness.rs  falsification_chunker_closure_path.rs  falsification_cis_plugin.rs  falsification_cis_plugin_b.rs  falsification_codegen_migrate.rs  falsification_codegen_secrets.rs  falsification_competitive_features.rs  falsification_competitive_features_b.rs  falsification_compliance_gate.rs  falsification_compliance_migration.rs  falsification_compliance_policy.rs  falsification_conditions_rollout_purifier.rs  falsification_container_builds.rs  falsification_contract_gc_registry.rs  falsification_convergence_kernel.rs  falsification_convergence_sandbox.rs  falsification_convergence_sandbox_b.rs  falsification_convert_cache_exec.rs  falsification_convert_pin_tripwire.rs  falsification_convert_pin_validate.rs  falsification_cron_conditions_scanner.rs  falsification_cron_rules.rs  falsification_cron_rules_b.rs  falsification_cron_source.rs  falsification_crypto_mcdc_verus.rs  falsification_dag_changeset.rs  falsification_derivation_dag.rs  falsification_derivation_dag_b.rs  falsification_derivation_exec.rs  falsification_derivation_model.rs  falsification_diff_do330.rs  falsification_diff_task_coverage.rs  falsification_dist.rs  falsification_env_promotion.rs  falsification_ephemeral_mcdc_migrate.rs  falsification_ephemeral_overlay.rs  (+117 more)
(+1608 files in other folders)
