[package]
name = "forjar"
version = "1.0.0"
edition = "2021"
rust-version = "1.87.0"
authors = ["Pragmatic AI Labs"]
description = "Rust-native Infrastructure as Code — bare-metal first, BLAKE3 state, provenance tracing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/forjar"
homepage = "https://paiml.com"
keywords = ["iac", "infrastructure", "devops", "provisioning", "bare-metal"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["benches/", ".pmat/", "state/", "docs/", "examples/", "target/", "*.profraw", "*.profdata", ".vscode/", ".idea/", "proptest-regressions/"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
blake3 = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
provable-contracts-macros = { version = "0.1", path = "../provable-contracts/crates/provable-contracts-macros" }
base64 = "0.22.1"
bashrs = "6.64.0"
pforge-runtime = "0.1.4"
pforge-config = "0.1.4"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
regex = "1"
rustc-hash = "2"
age = { version = "0.11", default-features = false }
clap_complete = "4"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "zstd"] }
bzip2 = "0.5"
zstd = "0.13"
tar = "0.4"

[build-dependencies]
provable-contracts = { version = "0.1", path = "../provable-contracts/crates/provable-contracts" }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[features]
container-test = []
gpu-container-test = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
