[package]
name = "forjar"
version = "1.1.1"
edition.workspace = true
rust-version = "1.88.0"
authors = ["Pragmatic AI Labs"]
description = "Rust-native Infrastructure as Code — bare-metal first, BLAKE3 state, provenance tracing"
license.workspace = true
repository.workspace = true
homepage = "https://paiml.com"
keywords = ["iac", "infrastructure", "devops", "provisioning", "bare-metal"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["benches/", ".pmat/", "/state/", "docs/", "examples/", "target/", "*.profraw", "*.profdata", ".vscode/", ".idea/", "proptest-regressions/"]

[workspace]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/forjar"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)', 'cfg(verus)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
checked_conversions = "warn"

[lints]
workspace = true

[dependencies]
blake3 = "1.8"
serde.workspace = true
serde_yaml_ng = "0.10"
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
provable-contracts-macros = { version = "0.1" }
base64 = "0.22.1"
bashrs = "6.64.0"
pforge-runtime = "0.1.4"
pforge-config = "0.1.4"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
regex = "1"
glob = "0.3"
rustc-hash = "2"
age = { version = "0.11", default-features = false, optional = true }
clap_complete = "4"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "zstd"] }
bzip2 = "0.5"
zstd = "0.13"
tar = "0.4"
sha2 = "0.10"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dhat = { version = "0.3.3", optional = true }

[build-dependencies]
provable-contracts = { version = "0.1" }

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
dhat = "0.3.3"

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "copia_bench"
harness = false

[[bench]]
name = "cli_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = true

[features]
encryption = ["dep:age"]
container-test = []
gpu-container-test = []
dhat-heap = ["dep:dhat"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
shared-version = true
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
